# 2021-DIP

./: README.md
2021-Homework1/: 作业1-说明.doc
2021-Homework1/ColorTransfer/include/: ColorTransfer.h
2021-Homework1/ColorTransfer/src/: use_lib.cpp
2021-Homework1/tex/: Workpaper.tex
2021-Homework2/: README_en.md  README_zh.md  作业2-说明.doc
2021-Homework2/ImageWarping/: CMakeLists.txt  ImageWarping.pro
2021-Homework2/ImageWarping/src/: idw.cpp  mainscene.cpp  mainscene.h  mainview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rbf.cpp  rbf.h
2021-Homework2/tex/: ImageWarping.aux  ImageWarping.tex
2021-Homework3/: 作业3-说明.doc
2021-Homework3/PossionImageEdit/: CMakeLists.txt  PossionImageEdit.pro
2021-Homework3/PossionImageEdit/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  possionedit.cpp  possionedit.h
2021-Homework3/tex/: PossionEdit.aux  PossionEdit.tex
2021-Homework4/: 作业4-说明.doc
2021-Homework4/ImagePyramid/: ImagePyramid.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
2021-Homework4/tex/: ImagePyramid.aux  ImagePyramid.tex
2021-Homework5/: 作业5-说明.doc
2021-Homework5/Grabcut/: Grabcut.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
2021-Homework5/tex/: Grabcut.tex
2021-Homework6/: 作业6-说明.pptx
2021-Homework6/LearnNetwork/Code/: fashion_mnist_train.py  insect_train.py  mnist_makeData.py  mnist_train.py  plane_train.py
2021-Homework6/LearnNetwork/Code/utils/: mnist_dataLoader.py  net.py  plot_confusion_matrix.py  points_dataloader.py  points_net.py
2021-Homework6/tex/: LearnNetwork.tex
2021-作业1/ColorTransfer/: CMakeLists.txt
2021-作业1/ColorTransfer/src/: ColorTransfer.cpp  use_formula.cpp
2021-作业1/tex/: Workpaper.aux
